Update hero section with light golden yellow background

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="bg-gradient-to-b from-gray-50 to-gray-100 py-20">
+    <section class="bg-gradient-to-b from-yellow-50 to-yellow-100 py-20" style="background: linear-gradient(to bottom, #fffef0, #fffaeb);">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div>
