--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 </div>
                 
                 <div class="flex items-center gap-4">
-                    <button class="hidden sm:block bg-gradient-to-r from-pink-500 to-red-500 text-white px-4 sm:px-6 py-2 rounded-full hover:shadow-lg transition text-sm">
+                    <a href="calculator/index.html" class="hidden sm:block bg-gradient-to-r from-pink-500 to-red-500 text-white px-4 sm:px-6 py-2 rounded-full hover:shadow-lg transition text-sm">
                         Cost Calculator
-                    </button>
+                    </a>
                     
                     <!-- Mobile menu button -->
                     <button id="mobile-menu-button" class="lg:hidden text-gray-700 hover:text-gray-900 focus:outline-none">
@@ -68,9 +68,9 @@
                 <a href="#" class="block text-gray-700 hover:text-gray-900 py-2">Services</a>
                 <a href="#" class="block text-gray-700 hover:text-gray-900 py-2">Resources</a>
                 <a href="#" class="block text-gray-700 hover:text-gray-900 py-2">Contact Us</a>
-                <button class="w-full bg-gradient-to-r from-pink-500 to-red-500 text-white px-6 py-3 rounded-full hover:shadow-lg transition">
+                <a href="calculator/index.html" class="block text-center w-full bg-gradient-to-r from-pink-500 to-red-500 text-white px-6 py-3 rounded-full hover:shadow-lg transition">
                     Cost Calculator
-                </button>
+                </a>
             </div>
         </div>
     </nav>
@@ -86,10 +86,10 @@
                         Free zone or mainland? How many visas or shareholders? From our experience with <strong>business
                             setup in Dubai</strong> for over 80,000 entrepreneurs, we have created the Business Setup
                         Cost Calculator to give you the answer.</p>
-                    <button
-                        class="bg-gradient-to-r from-blue-900 via-blue-700 to-blue-500 text-white px-10 py-4 rounded-lg hover:shadow-xl hover:scale-105 transition-all duration-300 font-semibold text-lg shadow-lg">
+                    <a href="calculator/index.html"
+                        class="inline-block bg-gradient-to-r from-blue-900 via-blue-700 to-blue-500 text-white px-10 py-4 rounded-lg hover:shadow-xl hover:scale-105 transition-all duration-300 font-semibold text-lg shadow-lg">
                         Calculate Now
-                    </button>
+                    </a>
                 </div>
                 <div class="flex justify-center">
                     <div class="w-full h-96 rounded-2xl overflow-hidden shadow-xl">
@@ -255,10 +255,10 @@
                     <p class="text-gray-600 text-sm mb-6 leading-relaxed">Before you do anything, talk to one of our
                         experts at company formation in Dubai. We'll show you how easy the Virtuzone process is and why
                         we're the partner of choice for more entrepreneurs choosing to start a Dubai company.</p>
-                    <button
-                        class="bg-blue-600 text-white px-8 py-3 rounded-lg hover:bg-blue-700 transition w-full mb-3 font-semibold">
+                    <a href="calculator/index.html"
+                        class="block text-center bg-blue-600 text-white px-8 py-3 rounded-lg hover:bg-blue-700 transition w-full mb-3 font-semibold">
                         Calculate Now
-                    </button>
+                    </a>
                     <p class="text-center text-gray-500 text-sm mb-3">or</p>
                     <button
                         class="bg-blue-600 text-white px-8 py-3 rounded-lg hover:bg-blue-700 transition w-full font-semibold">
