--- a/index.html
+++ b/index.html
@@ -76,23 +76,23 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="bg-gradient-to-b from-yellow-50 to-yellow-100 py-20" style="background: linear-gradient(to bottom, #fffef0, #fffaeb);">
+    <section class="bg-gradient-to-b from-yellow-50 to-yellow-100 py-12 sm:py-16 md:py-20" style="background: linear-gradient(to bottom, #fffef0, #fffaeb);">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid md:grid-cols-2 gap-12 items-center">
-                <div>
-                    <h2 class="text-5xl font-bold mb-6 leading-tight bg-gradient-to-r from-blue-900 via-blue-700 to-blue-500 bg-clip-text text-transparent">How Much Does Business Setup In
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-12 items-center">
+                <div class="text-center md:text-left">
+                    <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4 sm:mb-6 leading-tight bg-gradient-to-r from-blue-900 via-blue-700 to-blue-500 bg-clip-text text-transparent">How Much Does Business Setup In
                         Dubai Cost?</h2>
-                    <p class="text-gray-700 text-lg mb-8 leading-relaxed">That depends. What is your business activity?
+                    <p class="text-gray-700 text-base sm:text-lg mb-6 sm:mb-8 leading-relaxed">That depends. What is your business activity?
                         Free zone or mainland? How many visas or shareholders? From our experience with <strong>business
                             setup in Dubai</strong> for over 80,000 entrepreneurs, we have created the Business Setup
                         Cost Calculator to give you the answer.</p>
                     <a href="calculator/index.html"
-                        class="inline-block bg-gradient-to-r from-blue-900 via-blue-700 to-blue-500 text-white px-10 py-4 rounded-lg hover:shadow-xl hover:scale-105 transition-all duration-300 font-semibold text-lg shadow-lg">
+                        class="inline-block w-full sm:w-auto bg-gradient-to-r from-blue-900 via-blue-700 to-blue-500 text-white px-8 sm:px-10 py-3 sm:py-4 rounded-lg hover:shadow-xl hover:scale-105 transition-all duration-300 font-semibold text-base sm:text-lg shadow-lg text-center">
                         Calculate Now
                     </a>
                 </div>
-                <div class="flex justify-center">
-                    <div class="w-full h-96 rounded-2xl overflow-hidden shadow-xl">
+                <div class="flex justify-center order-first md:order-last">
+                    <div class="w-full h-64 sm:h-80 md:h-96 rounded-2xl overflow-hidden shadow-xl">
                         <img src="assets/images/dubai.jpg" alt="Dubai Business Setup" class="w-full h-full object-cover">
                     </div>
                 </div>
@@ -101,15 +101,15 @@
     </section>
 
     <!-- Services Section - Already own a business -->
-    <section class="py-20 bg-white"></section>
+    <section class="py-12 sm:py-16 md:py-20 bg-white">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="text-4xl font-bold text-center mb-4 bg-gradient-to-r from-blue-900 via-blue-600 to-sky-400 bg-clip-text text-transparent">Already own a business?</h2>
-        <p class="text-center text-gray-600 text-lg mb-16">Simplify your operations with our end-to-end suite of
+        <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-3 sm:mb-4 bg-gradient-to-r from-blue-900 via-blue-600 to-sky-400 bg-clip-text text-transparent">Already own a business?</h2>
+        <p class="text-center text-gray-600 text-base sm:text-lg mb-8 sm:mb-12 md:mb-16">Simplify your operations with our end-to-end suite of
             corporate services</p>
 
-        <div class="grid md:grid-cols-4 gap-5 mb-6">
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-5 mb-4 sm:mb-6">
             <!-- Service Card 1 -->
-            <div class="bg-gray-50 p-8 rounded-xl hover:shadow-xl transition-all duration-300">
+            <div class="bg-gray-50 p-6 sm:p-8 rounded-xl hover:shadow-xl transition-all duration-300">
                 <div
                     class="w-14 h-14 bg-gradient-to-br from-pink-500 to-red-500 rounded-xl flex items-center justify-center mb-5">
                     <i class="fas fa-file-invoice text-white text-2xl"></i>
@@ -121,7 +121,7 @@
             </div>
 
             <!-- Service Card 2 -->
-            <div class="bg-gray-50 p-8 rounded-xl hover:shadow-xl transition-all duration-300">
+            <div class="bg-gray-50 p-6 sm:p-8 rounded-xl hover:shadow-xl transition-all duration-300">
                 <div
                     class="w-14 h-14 bg-gradient-to-br from-pink-500 to-red-500 rounded-xl flex items-center justify-center mb-5">
                     <i class="fas fa-university text-white text-2xl"></i>
@@ -133,7 +133,7 @@
             </div>
 
             <!-- Service Card 3 -->
-            <div class="bg-gray-50 p-8 rounded-xl hover:shadow-xl transition-all duration-300">
+            <div class="bg-gray-50 p-6 sm:p-8 rounded-xl hover:shadow-xl transition-all duration-300">
                 <div
                     class="w-14 h-14 bg-gradient-to-br from-pink-500 to-red-500 rounded-xl flex items-center justify-center mb-5">
                     <i class="fas fa-calculator text-white text-2xl"></i>
@@ -145,7 +145,7 @@
             </div>
 
             <!-- Service Card 4 -->
-            <div class="bg-gray-50 p-8 rounded-xl hover:shadow-xl transition-all duration-300">
+            <div class="bg-gray-50 p-6 sm:p-8 rounded-xl hover:shadow-xl transition-all duration-300">
                 <div
                     class="w-14 h-14 bg-gradient-to-br from-pink-500 to-red-500 rounded-xl flex items-center justify-center mb-5">
                     <i class="fas fa-clipboard-check text-white text-2xl"></i>
@@ -157,9 +157,9 @@
             </div>
         </div>
 
-        <div class="grid md:grid-cols-4 gap-5">
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-5">
             <!-- Service Card 5 -->
-            <div class="bg-gray-50 p-8 rounded-xl hover:shadow-xl transition-all duration-300">
+            <div class="bg-gray-50 p-6 sm:p-8 rounded-xl hover:shadow-xl transition-all duration-300">
                 <div
                     class="w-14 h-14 bg-gradient-to-br from-pink-500 to-red-500 rounded-xl flex items-center justify-center mb-5">
                     <i class="fas fa-id-card text-white text-2xl"></i>
@@ -171,7 +171,7 @@
             </div>
 
             <!-- Service Card 6 -->
-            <div class="bg-gray-50 p-8 rounded-xl hover:shadow-xl transition-all duration-300">
+            <div class="bg-gray-50 p-6 sm:p-8 rounded-xl hover:shadow-xl transition-all duration-300">
                 <div
                     class="w-14 h-14 bg-gradient-to-br from-pink-500 to-red-500 rounded-xl flex items-center justify-center mb-5">
                     <i class="fas fa-user-tie text-white text-2xl"></i>
@@ -183,7 +183,7 @@
             </div>
 
             <!-- Service Card 7 -->
-            <div class="bg-gray-50 p-8 rounded-xl hover:shadow-xl transition-all duration-300">
+            <div class="bg-gray-50 p-6 sm:p-8 rounded-xl hover:shadow-xl transition-all duration-300">
                 <div
                     class="w-14 h-14 bg-gradient-to-br from-pink-500 to-red-500 rounded-xl flex items-center justify-center mb-5">
                     <i class="fas fa-gavel text-white text-2xl"></i>
@@ -206,14 +206,14 @@
     </section>
 
     <!-- Business Setup Section -->
-    <section class="py-20 bg-gray-50">
+    <section class="py-12 sm:py-16 md:py-20 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-4xl font-bold text-center mb-4 bg-gradient-to-r from-blue-900 via-blue-600 to-sky-400 bg-clip-text text-transparent">Should you undertake business setup in Dubai
+            <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-3 sm:mb-4 bg-gradient-to-r from-blue-900 via-blue-600 to-sky-400 bg-clip-text text-transparent">Should you undertake business setup in Dubai
                 yourself?</h2>
-            <p class="text-center text-gray-600 text-lg mb-16">Wondering if you can start a Dubai company yourself? You
+            <p class="text-center text-gray-600 text-base sm:text-lg mb-8 sm:mb-12 md:mb-16">Wondering if you can start a Dubai company yourself? You
                 can. But there are some things you need to know.</p>
 
-            <div class="grid md:grid-cols-3 gap-8 mb-8">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 sm:gap-8 mb-6 sm:mb-8">
                 <!-- Card 1 -->
                 <div class="bg-white p-10 rounded-xl shadow-sm hover:shadow-lg transition-all duration-300">
                     <div class="text-red-500 text-3xl font-bold mb-5">1</div>
@@ -240,7 +240,7 @@
                 </div>
             </div>
 
-            <div class="grid md:grid-cols-2 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 sm:gap-8">
                 <!-- Card 4 -->
                 <div class="bg-white p-10 rounded-xl shadow-sm hover:shadow-lg transition-all duration-300">
                     <div class="text-red-500 text-3xl font-bold mb-5">4</div>
@@ -273,9 +273,9 @@
     </section>
 
     <!-- Business Setup Virtuzone Way Section -->
-    <section class="py-20 bg-black text-white">
+    <section class="py-12 sm:py-16 md:py-20 bg-black text-white">
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <h2 class="text-4xl font-bold mb-6">Business setup in Dubai – the Virtuzone way.</h2>
+            <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-4 sm:mb-6">Business setup in Dubai – the Virtuzone way.</h2>
             <p class="text-gray-300 text-lg mb-6 leading-relaxed">Our time-tested process saves you time and money,
                 while removing the headaches of beginning your journey. We know the game. We have the networks. We are
                 the leaders in this space.</p>
@@ -293,17 +293,17 @@
         </div>
     </section>
 
-    <!-- What Setup Option Section --></section>
-    <section class="py-20 bg-white">
+    <!-- What Setup Option Section -->
+    <section class="py-12 sm:py-16 md:py-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-4xl font-bold text-center mb-4 bg-gradient-to-r from-blue-900 via-blue-600 to-sky-400 bg-clip-text text-transparent">What setup option is best for your business?
+            <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-3 sm:mb-4 bg-gradient-to-r from-blue-900 via-blue-600 to-sky-400 bg-clip-text text-transparent">What setup option is best for your business?
             </h2>
-            <p class="text-center text-gray-600 text-lg mb-4">Business setup in Dubai (or anywhere in the UAE) can be
+            <p class="text-center text-gray-600 text-base sm:text-lg mb-3 sm:mb-4">Business setup in Dubai (or anywhere in the UAE) can be
                 complicated.</p>
-            <p class="text-center text-gray-600 text-lg mb-16">Decisions need to be made which can affect your journey
-                and shape your success.<br>Jurisdiction? Free zone or mainland?</p>
+            <p class="text-center text-gray-600 text-base sm:text-lg mb-8 sm:mb-12 md:mb-16">Decisions need to be made which can affect your journey
+                and shape your success.<br class="hidden sm:block">Jurisdiction? Free zone or mainland?</p>
 
-            <div class="grid md:grid-cols-2 gap-8 max-w-5xl mx-auto">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 sm:gap-8 max-w-5xl mx-auto">
                 <!-- Free Zones Card -->
                 <div class="bg-gray-50 p-10 rounded-xl shadow-lg">
                     <h3 class="text-2xl font-bold text-gray-900 mb-6">Free Zones</h3>
@@ -358,7 +358,7 @@
     </section>
 
     <!-- The Process Section -->
-    <section class="py-20 bg-white relative overflow-hidden">
+    <section class="py-12 sm:py-16 md:py-20 bg-white relative overflow-hidden">
         <!-- Large Logo Background -->
         <div class="absolute right-0 top-0 w-1/2 h-full flex items-center justify-end pr-8">
             <img src="assets/images/logo.png" alt="Company Logo" class="w-auto h-96 opacity-60 object-contain">
@@ -366,8 +366,8 @@
 
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
             <!-- Header -->
-            <div class="text-center mb-12 max-w-3xl mx-auto">
-                <h2 class="text-4xl font-bold mb-6 bg-gradient-to-r from-blue-900 via-blue-600 to-sky-400 bg-clip-text text-transparent">The process of business setup in Dubai</h2>
+            <div class="text-center mb-8 sm:mb-12 max-w-3xl mx-auto">
+                <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-4 sm:mb-6 bg-gradient-to-r from-blue-900 via-blue-600 to-sky-400 bg-clip-text text-transparent">The process of business setup in Dubai</h2>
                 <p class="text-gray-700 text-base leading-relaxed">With Virtuzone as your company formation partner,
                     registering a company in the UAE is not only easy, but it's the most cost-effective way to do it! In
                     fact, the entire process can take as little as 24 hours! That's right! All you have to do is supply
@@ -376,7 +376,7 @@
             </div>
 
             <!-- Process Cards Grid -->
-            <div class="grid md:grid-cols-2 gap-5 max-w-4xl">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4 sm:gap-5 max-w-4xl">
                 <!-- Step 1 -->
                 <div class="bg-gray-50 p-8 rounded-lg">
                     <h3 class="text-base font-bold text-gray-900 mb-3">1. Prepare Documentation</h3>
@@ -417,9 +417,9 @@
     </section>
 
     <!-- Statistics Section -->
-    <section class="py-16 bg-black">
+    <section class="py-12 sm:py-16 bg-black">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid md:grid-cols-3 gap-12 text-center">
+            <div class="grid grid-cols-1 sm:grid-cols-3 gap-8 sm:gap-12 text-center">
                 <!-- Stat 1 -->
                 <div>
                     <h3 class="text-5xl font-bold text-white mb-3">15+</h3>
@@ -442,17 +442,17 @@
     </section>
 
     <!-- Business Insights Section -->
-    <section class="py-20 bg-white">
+    <section class="py-12 sm:py-16 md:py-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <!-- Header -->
-            <div class="text-center mb-12">
-                <h2 class="text-4xl font-bold mb-4 bg-gradient-to-r from-blue-900 via-blue-600 to-sky-400 bg-clip-text text-transparent">Business Setup in Dubai Insights</h2>
-                <p class="text-gray-600 text-lg">Keep up with the latest UAE company formation insights with articles
+            <div class="text-center mb-8 sm:mb-12">
+                <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-3 sm:mb-4 bg-gradient-to-r from-blue-900 via-blue-600 to-sky-400 bg-clip-text text-transparent">Business Setup in Dubai Insights</h2>
+                <p class="text-gray-600 text-base sm:text-lg">Keep up with the latest UAE company formation insights with articles
                     from our team of experts.</p>
             </div>
 
             <!-- Blog Cards Grid -->
-            <div class="grid md:grid-cols-3 gap-8">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
                 <!-- Card 1 -->
                 <div class="bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300">
                     <div class="h-48 bg-gradient-to-br from-gray-800 to-gray-900 flex items-center justify-center">
